--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.6.0",
     "antd": "^5.22.4",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
