--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "facetrack": "file:",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.0.2"
