--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "antd": "^5.23.4",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "date-fns": "^4.1.0",
     "facetrack": "file:",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-big-calendar": "^1.18.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
@@ -29,6 +31,7 @@
     "@eslint/js": "^9.15.0",
     "@types/node": "^22.13.9",
     "@types/react": "^18.3.12",
+    "@types/react-big-calendar": "^1.16.1",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.15.0",
