Сonverted date to ISO format without UTC offset and fixed serialization in Redux

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-#VITE_API_URL=http://localhost:5285
-VITE_API_URL=https://facetrack.website/api
+VITE_API_URL=http://localhost:5285
+#VITE_API_URL=https://facetrack.website/api
 
